--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
+
 logs
 project/project
 project/target
 target
 lib_managed
+public/
 tmp
 .history
 dist
@@ -20,30 +22,6 @@ node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
-/public
-/build
-.bsp/
-
-/.bundle
-
-# Ignore cache
-/.sass-cache
-/.cache
-
-# Ignore .DS_store file
-.DS_Store
-
-Staticfile.auth
-
 /vendor
-/target
-/project/project
-/project/target
-/.project
-/logs
-.idea
-
-.metals/
-.vscode/
-
 /.batect
+/.bsp
