--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -17,7 +17,8 @@ show_govuk_logo: true
 # Links to show on right-hand-side of header
 header_links:
   Developer Hub: https://developer.service.hmrc.gov.uk
-  Documentation: https://developer.service.hmrc.gov.uk/api-documentation/docs/using-the-hub
+  Getting started: https://developer.service.hmrc.gov.uk/api-documentation/docs/using-the-hub
+  API documentation: https://developer.service.hmrc.gov.uk/api-documentation/docs/api
   Applications: https://developer.service.hmrc.gov.uk/developer/applications
   Support: https://developer.service.hmrc.gov.uk/developer/support
 
